[project]
name = "bca-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "keyboard>=0.13.5",
    "pandas>=2.2.3",
    "pyautogui>=0.9.54",
    "pychrome>=0.2.4",
    "pyperclip>=1.9.0",
    "selenium>=4.33.0",
]
